@@ -2,6 +2,8 @@
 
 SimpleTest 6.x-2.9, xxxx-xx-xx (development version)
 ------------------------------
+- Changes:
+   * #576256: Theme laying needs to be initialized during setUp().
 - Bugs:
    * #442890: HEAD info left in simpletest.info.
    * #474394 by RockyRoad: block.test should treat delta as string.
